--- a/src/jasa_pengiriman/client/view/PenggunaView.form
+++ b/src/jasa_pengiriman/client/view/PenggunaView.form
@@ -273,7 +273,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Riwayat Pengguna"/>
+        <Property name="text" type="java.lang.String" value="Riwayat Peran"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
